# rebacs

./: .drone.yml  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix  graph.dat.bak
proto/: graph.proto  graph_permissions.proto  rebacs.proto  themis.proto
rebacdb/: Cargo.toml
rebacdb/src/: lib.rs  tests.rs
rebacs_core/: Cargo.toml
rebacs_core/src/: lib.rs  tests.rs
rebacs_server/: Cargo.toml  build.rs
rebacs_server/proto/: rebacs.proto
rebacs_server/src/: grpc_service.rs  main.rs
rebacserver/: Cargo.toml
rebacserver/src/: grpc_service.rs  main.rs
src/: graph.rs  graph_permissions.rs  grpc_service.rs  kafka_backend.rs  main.rs  rebacs_proto.rs  relation_set.rs  themis_proto.rs
