[package]
name = "rebacs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
log = "0.4.17"
env_logger = "0.10.0"

serde = { version="1.0", features=["derive"] }
tokio = { version = "1.27.0", features = ["full"] }

tonic = { version="0.9.2", features=["tls"] }
prost = "0.11.9"
sha2 = "0.10.6"
hex = "0.4.3"
compact_str = "0.7.0"

thiserror = "1.0.47"

jsonwebtoken = "8.3.0"

reqwest = { version="0.11.20", features=["json", "rustls-tls"], default-features=false}

[build-dependencies]
tonic-build = "0.9.2"
