[package]
name = "rebacdb"
description = "A relationship-based access control database inspired by google zanzibar."
version = "0.1.0"
edition = "2021"
authors = [ "Paul Z <info@pfz4.de>" ]
readme = "../README.md"
repository = "https://github.com/pfz4/rebacs"
license = "LGPL-3.0-or-later"
keywords = [ "accesscontrol", "relationship", "rebac", "database" ]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34", default-features = false, features = [ "io-util", "sync" ] }
