[package]
name = "rebacserver"
version = "0.1.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
log = "0.4.17"
env_logger = "0.10.0"

serde = { version="1.0", features=["derive"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "fs"] }

tonic = { version="0.9.2", features=["tls", "prost", "gzip"] }
prost = "0.11.9"

thiserror = "1.0.47"

jsonwebtoken = "8.3.0"

reqwest = { version="0.11.20", features=["json", "rustls-tls"], default-features=false}

rebacdb = { path="../rebacdb" }

[build-dependencies]
tonic-build = "0.9.2"

